--- a/src/main/webapp/public/styles/main.css
+++ b/src/main/webapp/public/styles/main.css
@@ -32,7 +32,7 @@ body {
   margin-bottom: 50px;
 }
 
-.main-body--wrapper {
+.content {
   margin-top: 20px;
   margin-bottom: 50px;
 }
@@ -41,6 +41,10 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+dd {
+  margin-left: 10px;
 }
 
 a {
@@ -81,6 +85,33 @@ pre {
   margin-bottom: 20px;
 }
 
+.no-margin-left {
+  margin-left: 0;
+}
+
+.main-loader-mask {
+  display: block;
+  position: absolute;
+  height: auto;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 180px 15px 50px;
+  background-color:#f1f1f1;
+  z-index:9999;
+}
+.loading-big {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  top: -30px;
+  left: 0;
+  right: 0;
+  margin: 0;
+  background: url("../img/loading-big.gif") no-repeat center;
+}
+
 /** TAB LEFT **/
 .tab-content {
   overflow: auto;
@@ -101,7 +132,20 @@ pre {
 .header--navbar {
   margin: 0;
 }
+
 .navbar {
+  border: 0;
+}
+
+.navbar-nav>li>span {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  line-height: 20px;
+  display: block;
+  font-size: 20px;
+}
+
+.navbar-static-top {
   font-family: Montserrat,sans-serif;
   position: absolute;
   z-index: 999;
@@ -114,22 +158,23 @@ pre {
   position: relative;
   border-radius: 0;
   padding: 0;
+  margin-bottom: 0;
 }
-.navbar .spring-logo--container {
+.navbar-static-top .spring-logo--container {
   display: inline-block;
 }
-.navbar .spring-logo--container .spring-logo {
+.navbar-static-top .spring-logo--container .spring-logo {
   margin: 12px 0 6px;
   width: 160px;
   height: 46px;
   display: inline-block;
   text-decoration: none;
 }
-.navbar .navbar-link.active a {
+.navbar-static-top .navbar-link.active a {
   background-color: #6db33f;
   box-shadow: none;
 }
-.navbar .navbar-link a {
+.navbar-static-top .navbar-link a {
   color: #eeeeee;
   text-transform: uppercase;
   text-shadow: none;
@@ -142,14 +187,14 @@ pre {
   -o-transition: all 0.15s;
   -ms-transition: all 0.15s;
 }
-.navbar .navbar-link:hover a {
+.navbar-static-top .navbar-link:hover a {
   color: #eeeeee;
   background-color: #6db33f;
 }
-.navbar .navbar-link.nav-search {
+.navbar-static-top .navbar-link.nav-search {
   padding: 20px 0 23px;
 }
-.navbar .navbar-link.nav-search .navbar-search--icon {
+.navbar-static-top .navbar-link.nav-search .navbar-search--icon {
   color: #eeeeee;
   font-size: 24px;
   padding: 3px 16px 3px 18px;
@@ -158,13 +203,13 @@ pre {
 .nav, .pagination, .carousel, .panel-title a {
     cursor: pointer;
 }
-.navbar .navbar-link.nav-search:hover .navbar-search--icon {
+.navbar-static-top .navbar-link.nav-search:hover .navbar-search--icon {
   text-shadow: 0 0 10px #6db33f;
 }
-.navbar .navbar-link.nav-search .search-input-close {
+.navbar-static-top .navbar-link.nav-search .search-input-close {
   display: none;
 }
-.navbar .navbar-link.nav-search.js-highlight {
+.navbar-static-top .navbar-link.nav-search.js-highlight {
   background-color: #6db33f;
 }
 
@@ -360,4 +405,269 @@ span.refresh {
 
 .exceptionsThrown {
   color: brown;
+}
+
+/** Headings and Tabs in Detail-View  **/
+.accordion-heading ,
+.accordion-heading > a,
+.accordion-heading > a:hover,
+.accordion-heading > a:focus,
+.nav-tabs > .active > a,
+.nav-tabs > .active > a:hover,
+.nav-tabs > .active > a:focus,
+.table > thead > tr > th {
+  background-color: #34302D;
+  border-color: #34302D;
+  color: #f1f1f1;
+}
+
+.accordion-group,
+.boxed {
+  border: 1px solid #34302D;
+}
+
+.sortable {
+  cursor: pointer;
+}
+
+.sorted-ascending,
+.sorted-descending {
+  color: #6db33f;
+}
+
+.sorted-ascending::after {
+  content: " \25b2";
+}
+.sorted-descending::after {
+  content: " \25bc";
+}
+
+.nav > li > a {
+  color: #838789;
+}
+
+.nav {
+  margin-bottom: 0;
+}
+
+/** Tabs-list in domain-section in JMX-View **/
+.tabs-left > ul {
+  max-width: 30%;
+  overflow: hidden;
+}
+
+/** health status**/
+dl.health-status > dt {
+  border-bottom: 1px solid #ddd;
+  background-color: #f9f9f9;
+  line-height: 20px;
+  padding: 8px;
+}
+
+dl.health-status {
+  margin-top: 0px;
+}
+
+dl.health-status dl.health-status {
+  margin-top: 20px !important;
+}
+
+dl.health-status td {
+  border-top: none;
+  border-bottom: 1px solid #ddd;
+}
+
+
+/** Metric Bars **/
+.bar-offset {
+  float: left;
+  box-sizing: border-box;
+  height: 100%;
+}
+
+.with-marks {
+  position: relative;
+}
+
+.bar-scale {
+  position: relative;
+  margin-top: -20px;
+  margin-bottom: 40px;
+}
+
+.pitch-line {
+  position: absolute;
+  width: 1px;
+  background-image: linear-gradient(to bottom, #333333 5px, transparent 5px);
+  background-repeat: repeat-x;
+}
+
+.value-mark {
+  position: absolute;
+  border-left: 1px solid #ee5f5b;
+  font-size: 12px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+}
+
+.mark-current {
+  width: 1px;
+  height: 20px;
+  position: absolute;
+  background-color: #dd514c;
+  background-image: linear-gradient(to bottom, #ee5f5b, #c43c35);
+  background-repeat: repeat-x;
+}
+
+/** Timeline **/
+.timeline {
+  position: relative;
+  list-style-type: none;
+  padding: 1em 0 1em 120px;
+}
+
+.timeline:before {
+  position: absolute;
+  top: 0;
+  content: ' ';
+  display: block;
+  width: 6px;
+  height: 100%;
+  margin-left: 0;
+  background: rgb(80,80,80);
+  background: -moz-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
+  background: -webkit-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
+  background: -o-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
+  background: -ms-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
+  background: linear-gradient(to bottom, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
+  z-index: 5;
+}
+
+.timeline li {
+  padding: 1em 0;
+}
+
+.timeline li:after {
+  content: "";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+.timeline .event {
+  position: relative;
+  width: 100%;
+  display: inline-block;
+  left: 15px;
+  padding-left: 5px;
+  cursor:pointer;
+}
+
+.timeline .event .time {
+  position: absolute;
+  left: -120px;
+  margin-left: -25px;
+  display: inline-block;
+  vertical-align: middle;
+  text-align:right;
+  width: 120px;
+}
+
+.timeline .event:before {
+  content: ' ';
+  display: block;
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  border-radius: 10px;
+  border: 4px solid #6db33f;
+  z-index: 10;
+  position: absolute;
+  left: -6px;
+  margin-left: -15px;
+}
+
+.timeline .event:hover:before {
+  background: #ccc;
+}
+
+/** Application-Header **/
+.header--application .navbar-inner,
+.header--application-urls .navbar-inner {
+  font-family: Montserrat,sans-serif;
+  z-index: 999;
+  filter: none;
+  background: #666 none;
+  border: none;
+  border-bottom: 1px solid #34302D;
+  box-shadow: none;
+  position: relative;
+  border-radius: 0;
+  padding: 0;
+}
+
+.header--application .application--name {
+  font-family: "Montserrat",sans-serif;
+  font-size: 24px;
+  line-height: 24px;
+  color: #ebf1e7;
+  display: inline-block;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.header--application .navbar-inner .navbar-link a {
+  color: #eeeeee;
+  text-transform: uppercase;
+  text-shadow: none;
+  font-size: 14px;
+  line-height: 14px;
+  padding: 16px 10px;
+  transition: all 0.15s;
+  -webkit-transition: all 0.15s;
+  -moz-transition: all 0.15s;
+  -o-transition: all 0.15s;
+  -ms-transition: all 0.15s;
+}
+
+.header--application .navbar-inner .navbar-link:hover a ,
+.header--application .navbar-inner .navbar-link.active a {
+  color: #ebf1e7;
+  background-color: #666;
+  box-shadow: none;
+}
+
+.header--application .navbar-inner .navbar-link a>span {
+  transition: color 0.15s;
+  -webkit-transition: color 0.15s;
+  -moz-transition: color 0.15s;
+  -o-transition: color 0.15s;
+  -ms-transition: color 0.15s;
+}
+
+.header--application .navbar-inner .navbar-link:hover a>span,
+.header--application .navbar-inner .navbar-link.active a>span {
+  border-top: 2px solid #6db33f;
+  border-bottom: 2px solid #6db33f;
+}
+
+.header--application-urls .navbar-inner {
+  background-color: #dedede;
+}
+
+.header--application-urls .navbar-inner li>a,
+.header--application-urls .navbar-inner li>a:hover {
+  text-shadow: none;
+  color: #34302D;
+}
+
+.header--application-urls .navbar-inner li>a:hover {
+  text-decoration:underline;
+}
+
+/** ENV **/
+.refresh-env-alert {
+  margin-top: 50px;
 }
