--- a/src/main/webapp/public/views/about.html
+++ b/src/main/webapp/public/views/about.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container content">
   <div class="main-template">
     This is an administration GUI for Spring Cloud applications. All applications has to register to the service registry (eg: Eureka).
   </div>
