--- a/src/main/webapp/public/views/apps/details.html
+++ b/src/main/webapp/public/views/apps/details.html
@@ -1,48 +1,38 @@
-<div class="alert alert-danger" ng-if="error">
-	<b>Error:</b> {{ error }}
-</div>
+<div class="container content">
 
-<div class="container">
+	<div class="alert alert-danger" ng-if="error">
+		<b>Error:</b> {{ error }}
+	</div>
+
 	<div class="col-md-6">
 	    <table class="table">
 	     <thead><tr><th>Application</th><th><small class="pull-right"><a href="api/instance/{{ instance.id }}/info">raw JSON</a></small></th></tr></thead>
 	    <tbody>
-	      <tr ng-repeat="(key, value) in info" >
-	        <td>{{ key }}</td><td>{{ value }}</td>
+	      <tr ng-repeat="(key, value) in appInfo">
+			  <td>{{ key }}</td><td style="white-space: pre;">{{ value | flatten }}</td>
 	      </tr>
 	    </tbody>
 	   </table>
 	</div>
-	
-	 <div class="col-md-6">
+
+	<div class="col-md-6" ng-if="gitInfo">
+		<table class="table">
+			<thead><tr><th>Git</th><th><small class="pull-right"><a href="api/instance/{{ instance.id }}/info">raw JSON</a></small></th></tr></thead>
+			<tbody>
+			<tr ng-repeat="(key, value) in gitInfo" >
+				<td>{{ key }}</td><td style="white-space: pre;">{{ value | flatten }}</td>
+			</tr>
+			</tbody>
+		</table>
+	</div>
+
+	<div class="col-md-6">
 		<table class="table">
 			<thead>
 				<tr><th>Health Checks</th><th><small class="pull-right"><a href="api/instance/{{ instance.id }}/health">raw JSON</a></small></th></tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td>Application</td><td><span class="status-{{health.status}}">{{ health.status }}</span></td>
-				</tr>
-			
-				<tr ng-if="health.db">
-					<td>Datasources</td>
-					<td><span class="status-{{health.db.status}}">{{ health.db.status }}</span><br>
-						{{health.db.database}}
-					</td>
-				</tr>
-				<tr ng-if="health.db.error" colspan="2" class="alert alert-danger" >{{ health.db.error }}</td></tr>
-		
-				<tr ng-repeat-start="(dbname, db) in health.db" ng-if="dbname != 'status' && dbname != 'error' && dbname != 'database' && dbname != 'hello'" >
-					<td>{{ dbname | capitalize }} Datasource</td><td><span class="status-{{db.status}}">{{ db.status }}</span><br>
-						{{db.database}}
-					</td>
-				</tr>
-				<tr ng-repeat-end ng-if="db.error"><td colspan="2" class="alert alert-danger" >{{ db.error }}</td></tr>
-				<tr ng-if="health.diskSpace">
-					<td>Diskspace</td><td><span class="status-{{health.diskSpace.status}}">{{ health.diskSpace.status }}</span><br>
-						{{ health.diskSpace.free / 1024 / 1024 | number:0 }}M free / {{ health.diskSpace.threshold / 1024 / 1024 | number:0 }}M threshold
-					</td>
-				</tr>
+				<tr><td colspan="2" ng-init="name= 'Application'" ng-include="'health.html'"></td></tr>
 			</tbody>
 		</table>
 	</div>
@@ -50,7 +40,7 @@
 	
 	<div class="col-md-6">
 	  <table class="table">
-	    <thead><tr><th colspan="2">Memory</th><th><small class="pull-right"><a href="api/instance/{{ instance.id }}/metrics">raw JSON</a></small></th></tr></thead>
+	    <thead><tr><th>Memory</th><th><small class="pull-right"><a href="api/instance/{{ instance.id }}/metrics">raw JSON</a></small></th></tr></thead>
 	    <tbody>
 	      <tr>
 	        <td colspan="2">
@@ -129,7 +119,7 @@
 	
 	<div class="col-md-6">
 	  <table class="table">
-	    <thead><tr><th colspan="2">Garbage Collection</th><th><small class="pull-right"><a href="api/instance/{{ instance.id }}/metrics">raw JSON</a></small></th></tr></thead>
+	    <thead><tr><th>Garbage Collection</th><th><small class="pull-right"><a href="api/instance/{{ instance.id }}/metrics">raw JSON</a></small></th></tr></thead>
 	      <tr ng-repeat-start="(name, value) in gcInfos track by name">
 	        <td>{{name | capitalize}} GC Count</td>
 	        <td>{{value.count}}</td>
@@ -140,6 +130,18 @@
 	      </tr>
 	    </tbody>
 	   </table>
+	</div>
+
+	<div class="col-md-6" ng-show="metrics['httpsessions.active'] != null">
+		<table class="table">
+			<thead><tr><th colspan="2">Servlet Container</th></tr></thead>
+			<tbody>
+			<tr>
+				<td>Http sessions</td>
+				<td>{{ metrics['httpsessions.active'] }} active / {{ metrics['httpsessions.max'] == -1 ? 'unlimited' : metrics['httpsessions.max'] + ' max' }}</td>
+			</tr>
+			</tbody>
+		</table>
 	</div>
 	
 	<div class="col-md-6" ng-show="hasDatasources">
@@ -165,8 +167,6 @@
 	    <div id="xd-jobs" class="tab-pane active col-md-12">
 	      <ul class="nav nav-tabs">
 	        <li ui-sref-active="active"><a ui-sref="apps.details.metrics({id: instance.id})">Metrics</a></li>
-	        <li ui-sref-active="active"><a ui-sref="apps.details.env({id: instance.id})">Environment</a></li>
-	        <li ui-sref-active="active"><a ui-sref="apps.details.props({id: instance.id})">Properties</a></li>
 	        <li ui-sref-active="active"><a ui-sref="apps.details.classpath({id: instance.id})">Classpath</a></li>
 	      </ul>
 	      <div class="tab-content">
@@ -176,3 +176,71 @@
 	  </div>
 	</div>
 </div>
+
+
+<script type="text/ng-template" id="health.html">
+	<dl class="health-status">
+		<dt>{{name | capitalize}} <span class="status-{{health.status}} pull-right">{{ health.status }}</span></dt>
+
+		<dd>
+			<table style="width:100%;">
+				<tr ng-repeat="(key, value) in health" ng-if="isHealthDetail(key, value)" ng-class="{'error': key == 'error'}">
+					<td>{{key | capitalize}}</td><td>{{value | joinArray:', '}}</td>
+				</tr>
+			</table>
+		</dd>
+
+		<dd ng-repeat="(name, health) in health" ng-if="isChildHealth(name, health)" >
+			<ng-include src="'health.html'" ng-if="name != 'diskSpace' && name != 'configServer'"></ng-include>
+			<ng-include src="'health-diskSpace.html'" ng-if="name == 'diskSpace'"></ng-include>
+			<ng-include src="'health-configServer.html'" ng-if="name == 'configServer'"></ng-include>
+		</dd>
+	</dl>
+</script>
+
+<script type="text/ng-template" id="health-diskSpace.html">
+	<dl class="health-status">
+		<dt>{{name | capitalize}} <span class="status-{{health.status}} pull-right">{{ health.status }}</span></dt>
+		<dd>
+			<table style="width:100%;">
+				<tr>
+					<td>Free</td><td>{{ health.free | humanBytes }}</td>
+				</tr>
+				<tr>
+					<td>Threshold</td><td>{{ health.threshold | humanBytes }}</td>
+				</tr>
+			</table>
+		</dd>
+	</dl>
+</script>
+
+<script type="text/ng-template" id="health-configServer.html">
+	<dl class="health-status">
+		<dt>{{name | capitalize}} <span class="status-{{health.status}} pull-right">{{ health.status }}</span></dt>
+		<dd ng-if="repository.error">
+			<table style="width:100%;">
+				<tr class="error">
+					<td>Error</td><td>{{ repository.error }}</td>
+				</tr>
+			</table>
+		</dd>
+		<dd>
+			<dl ng-repeat="repository in health.repositories" class="health-status">
+				<dt>{{repository.name }}</dt>
+				<dd>
+					<table style="width:100%;">
+						<tr>
+							<td>Label</td><td>{{ repository.label }}</td>
+						</tr>
+						<tr>
+							<td>Sources</td><td>{{ repository.sources | joinArray:', ' }}</td>
+						</tr>
+						<tr>
+							<td>Profiles</td><td>{{ repository.profiles | joinArray:', ' }}</td>
+						</tr>
+					</table>
+				</dd>
+			</dl>
+		</dd>
+	</dl>
+</script>
